Add nsPresContext and nsEventStateManager to cycle collection.  b=385376  r=Olli.Pettay  sr=jst  a=jst